--- a/oled.html
+++ b/oled.html
@@ -87,7 +87,7 @@
 	<p>abscissa: <b>msg.payload.x</b></p>
 	<p>ordinate: <b>msg.payload.y</b></p>
     <p>string: <b>msg.payload.text</b></p>
-	<p>Exemple: <b>{size:2,x:1,y:1,text:"Oled"}</b></p>
+	<p>Example: <b>{size:2,x:1,y:1,text:"Oled"}</b></p>
 </script>
 
 <script type='text/javascript'>
@@ -321,7 +321,7 @@
 	<p>Payload should contain coordinates of the pixel(s) and the color</p>
 	<p>each pixel must be define like <b>[abscissa,ordinate,color]</b></p>
 	<p>if color is set to <b>0</b> the pixel will turn off</p>
-	<p>Exemple:</p>
+	<p>Example:</p>
 	<p>One pixel:<b>msg.payload=[1,1,1]</b></p>
 	<p>Several pixels: <b>msg.payload=[[1,1,1],[24,32,0],...]</b></p>
 </script>
@@ -368,7 +368,7 @@
  	<p>end abscissa: <b>msg.payload.x1</b></p>
  	<p>end ordinate: <b>msg.payload.y1</b></p>
   	<p>color: <b>msg.payload.color</b></p>
-	<p>Exemple: <b>{x0:1,y0:1,x1:30,y1:30,color:1}</b></p>
+	<p>Example: <b>{x0:1,y0:1,x1:30,y1:30,color:1}</b></p>
 </script>
 
 <script type='text/javascript'>
@@ -413,7 +413,7 @@
  	<p>width: <b>msg.payload.w</b></p>
  	<p>height: <b>msg.payload.h</b></p>
   	<p>color: <b>msg.payload.color</b></p>
-	<p>Exemple: <b>{x:1,y:1,w:10,h:20,color:1}</b></p>
+	<p>Example: <b>{x:1,y:1,w:10,h:20,color:1}</b></p>
 </script>
 
 <script type='text/javascript'>
@@ -456,7 +456,7 @@
 	<p>abscissa: <b>msg.payload.x</b></p>
 	<p>ordinate: <b>msg.payload.y</b></p>
  	<p>percentage: <b>msg.payload.p</b></p>
-	<p>Exemple: <b>{x:1,y:1,p:25}</b></p>
+	<p>Example: <b>{x:1,y:1,p:25}</b></p>
 </script>
 
 <script type='text/javascript'>
@@ -499,7 +499,7 @@
 	<p>abscissa: <b>msg.payload.x</b></p>
 	<p>ordinate: <b>msg.payload.y</b></p>
  	<p>percentage: <b>msg.payload.p</b></p>
-	<p>Exemple: <b>{x:1,y:1,p:25}</b></p>
+	<p>Example: <b>{x:1,y:1,p:25}</b></p>
 </script>
 
 
@@ -543,7 +543,7 @@
 	<p>abscissa: <b>msg.payload.x</b></p>
 	<p>ordinate: <b>msg.payload.y</b></p>
  	<p>percentage: <b>msg.payload.p</b></p>
-	<p>Exemple: <b>{x:1,y:1,p:25}</b></p>
+	<p>Example: <b>{x:1,y:1,p:25}</b></p>
 </script>
 
 
