--- a/oled.html
+++ b/oled.html
@@ -81,7 +81,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="String">
-    <p>A node that write the inlet string with multiple of font 5x7</p>
+    <p>Writes the inlet string with multiple of font 5x7</p>
     <p>Payload should contain the font size (multiple of the original one in 5x7), coordinates where the string starts, and the text itself</p>
 	<p>size: <b>msg.payload.size</b></p>
 	<p>abscissa: <b>msg.payload.x</b></p>
@@ -124,7 +124,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="Clear">
-    	<p>A node that clear the Oled display</p>
+    	<p>Clears the Oled display</p>
     	<p>Payload should be set to <b>true</b> to enable the node</p>
 	<p>If pixels are inverted, set all pixels to 1</p>
 </script>
@@ -163,7 +163,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="Dimmed">
-    	<p>A node that change contrast of the Oled display</p>
+    	<p>Changes contrast of the Oled display</p>
     	<p>Payload should be set to <b>true</b> to reduce contrast and to <b>false</b> to turn back to bright</p>
 </script>
 
@@ -201,7 +201,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="Invertion">
-    	<p>A node that invert all pixels color values</p>
+    	<p>Inverts all pixels color values</p>
     	<p>Payload should be set to <b>true</b> to invert and to <b>false</b> to reverse</p>
 </script>
 
@@ -239,7 +239,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="Turn-on">
-    	<p>A node that turn-on Oled display</p>
+    	<p>Turns on the Oled display</p>
     	<p>Payload should be set to <b>true</b> to enable the node</p>
 	<p>All previous display will be restore</p>
 </script>
@@ -278,7 +278,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="Turn-off">
-    	<p>A node that turn-off Oled display</p>
+    	<p>Turns off the Oled display</p>
     	<p>Payload should be set to <b>true</b> to enable the node</p>
 	<p>All previous display will be store</p>
 </script>
@@ -317,7 +317,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="Pixel">
-	<p>A node that display specific pixel(s)</p>
+	<p>Displays specific pixel(s)</p>
 	<p>Payload should contain coordinates of the pixel(s) and the color</p>
 	<p>each pixel must be define like <b>[abscissa,ordinate,color]</b></p>
 	<p>if color is set to <b>0</b> the pixel will turn off</p>
@@ -360,7 +360,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="Line">
-	<p>A node that draw a line</p>
+	<p>Draws a line</p>
 	<p>Payload should contain coordinates of the start pixel, the end pixel and the color</p>
 	<p>if color is set to <b>0</b> the line will turn off</p>
 	<p>start abscissa: <b>msg.payload.x0</b></p>
@@ -405,7 +405,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="FillRectangle">
-	<p>A node that draw a filled rectangle </p>
+	<p>Draws a filled rectangle </p>
 	<p>Payload should contain coordinates of the start pixel, the width, the height and the color</p>
 	<p>if color is set to <b>0</b> the rectangle will turn off</p>
 	<p>abscissa: <b>msg.payload.x</b></p>
@@ -450,7 +450,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="Scroll">
-	<p>A node that draw a wifi display (w:19, h:9)</p>
+	<p>Draws a wifi display (w:19, h:9)</p>
 	<p>Payload should contain coordinates of the start pixels and the wifi power reception</p>
 	<p>the treasholds are <10,10-40,40-70,70-100</p>
 	<p>abscissa: <b>msg.payload.x</b></p>
@@ -493,7 +493,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="Battery">
-	<p>A node that draw a battery display (w:19, h:9)</p>
+	<p>Draws a battery display (w:19, h:9)</p>
 	<p>Payload should contain coordinates of the start pixels and the battery charge percentage</p>
 	<p>the treasholds are <10,10-40,40-70,70-100</p>
 	<p>abscissa: <b>msg.payload.x</b></p>
@@ -537,7 +537,7 @@
 </script>
 
 <script type="text/x-red" data-help-name="Wifi">
-	<p>A node that draw a wifi display (w:19, h:9)</p>
+	<p>Draws a wifi display (w:19, h:9)</p>
 	<p>Payload should contain coordinates of the start pixels and the wifi power reception</p>
 	<p>the treasholds are <10,10-40,40-70,70-100</p>
 	<p>abscissa: <b>msg.payload.x</b></p>
