--- a/oled.html
+++ b/oled.html
@@ -450,13 +450,12 @@
 </script>
 
 <script type="text/x-red" data-help-name="Scroll">
-	<p>Draws a wifi display (w:19, h:9)</p>
-	<p>Payload should contain coordinates of the start pixels and the wifi power reception</p>
-	<p>the treasholds are <10,10-40,40-70,70-100</p>
-	<p>abscissa: <b>msg.payload.x</b></p>
-	<p>ordinate: <b>msg.payload.y</b></p>
- 	<p>percentage: <b>msg.payload.p</b></p>
-	<p>Example: <b>{"x":1,"y":1,"p":25}</b></p>
+	<p>Scrolls the display</p>
+	<p>Payload should contain direction, start position and stop position.</p>
+	<p>direction: <b>msg.payload.direction</b></p>
+	<p>start: <b>msg.payload.start</b></p>
+ 	<p>stop: <b>msg.payload.stop</b></p>
+	<p>Example: <b>{"direction":"left","start":0,"stop":128}</b></p>
 </script>
 
 <script type='text/javascript'>
